--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,101 @@
-a, a:visited {
-    color: purple;
+@media (max-width: 768px) {
+  .card {
+    width: 250px;
+  }
+  iframe {
+    width: 300px;
+  }
 }
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+body {
+  background-image: url("../images/background.jpg");
+  background-size: cover;
+  margin: 0;
+  height: 100vh;
+}
+
 h1 {
-    color:red;
+  font-style: italic;
+  font-size: 30px;
 }
-    h1:hover{ color: blue;
+
+.about {
+  background-image: url(../images/background2.webp);
+  border: solid darkorchid;
+}
+
+h3 {
+  font-family: "Sofia", sans-serif;
+  font-size: 24px;
+  padding-inline: 15px;
+  color: darkred;
+  text-decoration: underline;
+}
+
+.text {
+  font-weight: bold;
+  font-size: 18px;
+  padding-inline: 25px;
+  font-style: oblique;
+}
+
+.nav-link {
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: Arial, sans-serif;
+}
+.nav-link:hover {
+  color: #ca4923;
+}
+
+.card-img-top {
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+  margin: 0 auto;
+}
+.card-img-top:hover {
+  transform: scale(1.1);
+  transition: transform 0.2s ease-in-out;
+}
+
+.social-class {
+  height: 50px;
+  width: 50px;
+  border-radius: 15px;
+}
+
+.fade-in {
+  opacity: 0;
+  animation: fadeIn 2s ease-in-out forwards;
+}
+
+.me {
+  width: 200px;
+  border-radius: 15px;
+  border: solid red;
+}
+.social-div {
+  position: fixed;
+  bottom: 0;
+}
+.contact {
+  padding-bottom: 150px;
+  padding-top: 150px;
+}
+.examples {
+  padding-top: 70px;
+  
+}
+
+.purpose {
+  padding-top: 70px;
 }
